// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PinnedLabel /> should not render a blue label if not shown 1`] = `""`;

exports[`<PinnedLabel /> should render a blue label if shown for comment 1`] = `
<Tooltip
  className="in"
  id="pinned-label"
  label={
    <Text
      fontSize="Caption"
      lineHeight="S"
      marginBottom={0}
      textAlign="center"
    >
      global.pinned.tooltip.comment
    </Text>
  }
  placement="bottom"
  style={
    Object {
      "marginBottom": 0,
      "wordBreak": "break-word",
    }
  }
>
  <span
    className="opinion__label opinion__label--blue"
  >
    <i
      className="cap cap-pin-1"
    />
     
    <FormattedMessage
      id="global.pinned.label"
      values={Object {}}
    />
  </span>
</Tooltip>
`;

exports[`<PinnedLabel /> should render a blue label if shown for opinion 1`] = `
<Tooltip
  className="in"
  id="pinned-label"
  label={
    <Text
      fontSize="Caption"
      lineHeight="S"
      marginBottom={0}
      textAlign="center"
    >
      global.pinned.tooltip.opinion
    </Text>
  }
  placement="bottom"
  style={
    Object {
      "marginBottom": 0,
      "wordBreak": "break-word",
    }
  }
>
  <span
    className="opinion__label opinion__label--blue"
  >
    <i
      className="cap cap-pin-1"
    />
     
    <FormattedMessage
      id="global.pinned.label"
      values={Object {}}
    />
  </span>
</Tooltip>
`;
